confluence.yml
apiVersion: v1
kind: Service
metadata:
  name: confluence
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 8091
      targetPort: synchrony
      protocol: TCP
      name: synchrony
  selector:
    app: confluence
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confluence
  labels:
    app: confluence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confluence
  template:
    metadata:
      labels:
        app: confluence
    spec:
      containers:
        - name: confluence
          image: atlassian/confluence-server:6.13.0
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
            - name: synchrony
              containerPort: 8091
              protocol: TCP
          # livenessProbe:
          #   tcpSocket:
          #     port: http
          #   initialDelaySeconds: 60
          #   periodSeconds: 15
          #   timeoutSeconds: 3
          # readinessProbe:
          #   tcpSocket:
          #     port: http
          #   initialDelaySeconds: 30
          #   periodSeconds: 15
          #   timeoutSeconds: 3
          volumeMounts:
            - name: data
              mountPath: /var/atlassian/application-data/confluence          
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: confluence-pvc
          # emptyDir: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: confluence
  labels:
    app: confluence
  annotations:
      kubernetes.io/ingress.class: nginx
      certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - confluence.skypony.sethitow.com
      secretName: letsencrypt-prod
  rules:
    - host: confluence.skypony.sethitow.com
      http:
        paths:
          - path: /
            backend:
              serviceName: confluence
              servicePort: http
          - path: /synchrony
            backend:
              serviceName: confluence
              servicePort: synchrony
