k8s-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-dashboard-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - k8s.skypony.sethitow.com
    secretName: letsencrypt-prod
  rules:
  - host: k8s.skypony.sethitow.com
    http:
      paths:
      - backend:
          serviceName: dashboard-demo-kubernetes-dashboard
          servicePort: 443
